[package]
name = "dbfs-vfs"
version = "0.1.0"
edition = "2021"

[dependencies]
dbfs2 = { path = "../../dbfs" }
vfscore = { path = "../vfscore" }
jammdb = { git = "https://github.com/Godones/jammdb" }
log = "0.4"
spin = "0.9"
ksync = { path = "../../Alien/subsystems/ksync" }
lock_api = "0.4"
device_interface = { path = "../../Alien/subsystems/device_interface" }
constants = { path = "../../Alien/subsystems/constants" }
downcast-rs = { version = "1.2.0", default-features = false }
memmap2 = "0.5"
libc = "0.2"
core2 = { version = "0.4", default-features = false }

[features]
fuse = ["dbfs2/fuse"]