[package]
name = "dbfs-vfs"
version = "0.1.0"
edition = "2021"

[dependencies]
vfscore = { path = "../vfscore" }
dbfs2 = { git = "https://github.com/nusakom/dbfs.git" }
jammdb = { git = "https://github.com/nusakom/jammdb.git" }
device_interface = { git = "https://github.com/Godones/device_interface.git" }
constants = { git = "https://github.com/Godones/constants.git" }
log = "0.4"
spin = "0.9"
lock_api = "0.4"
downcast-rs = { version = "1.2.0", default-features = false }
bitflags = "1.3"

[features]
default = []